[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pukr"
version = '0.0.2'
description = "A place to store personal log config files (short for puukuur - woodshed)"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/pukr'
packages = [
    { include = 'pukr' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "0.6.0"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
tox = "^3.24.5"

[tool.poetry.extras]
test = ["pytest"]
