[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pukr"
version = '0.1.1'
description = "A place to store personal log config files (short for puukuur - woodshed)"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/pukr'
packages = [
    { include = 'pukr' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "~0"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "~3"
pytest = "~7"
pytest-cov = "~4"
flake8 = "~6"
tox = "~4"

[tool.isort]
profile = 'black'
force_grid_wrap = 2
force_sort_within_sections = true
skip_gitignore = true
skip_glob = ['*_pb2.py', '*_pb2_grpc.py']

[tool.poetry.extras]
test = ["pytest"]
